<resources>
    <string name="app_name">CryptoApp</string>
    <string name="textView_price">Стоимость:</string>
    <string name="date_last_update">Обновлено в:</string>
    <string name="price">Цена:</string>
    <string name="min_price_of_day">Минимум за день:</string>
    <string name="max_price_of_day">Максимум за день:</string>
    <string name="last_deal">Последняя сделка:</string>
    <string name="update">Обновлено:</string>
    <string name="imagecoin">imageCoin</string>
</resources>